# CredVault

Bounty/CredVault/: .eslintrc.json  .gitignore  API_SPEC.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md
Bounty/CredVault/programs/credVault/: Cargo.toml
Bounty/CredVault/programs/credVault/src/: lib.rs
CredVault/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.md  DEPLOYMENT_CONFIG.md  ISSUER_VERIFICATION_README.md  PAYMENT_STORAGE.md  README.md  SECURITY.md  deploy.ps1  deploy.sh  next.config.js  package-lock.json  package.json  server.js  start_frontend.py  tailwind.config.js  tsconfig.json  verify.html  wallet.js
CredVault/backend/: index.js  package-lock.json  package.json
CredVault/components/: AnalyticsDashboard.tsx  AuthProvider.tsx  Badge.tsx  ConnectWalletStep.tsx  CredentialCard.tsx  EmailVerificationForm.tsx  EmployerDashboard.tsx  EmployerVerificationPortal.tsx  EmptyState.tsx  FeatureCard.tsx  IssuerDashboard.tsx  Layout.tsx  LoadingSpinner.tsx  LoginForm.tsx  MintBatchCredentialsForm.tsx  PhoneVerificationForm.tsx  SectionHeader.tsx  SignupForm.tsx  StatCard.tsx  StudentDashboard.tsx  UserRoleSelector.tsx  VerifierDashboard.tsx
CredVault/contexts/: AuthContext.tsx  CredVaultContext.tsx
CredVault/docs/: SMART_CONTRACT.md
CredVault/hooks/: useAnchorProgram.ts
CredVault/lib/: credentialSchema.ts  solana.ts
CredVault/pages/: _app.tsx  auth.tsx  dashboard.tsx  docs.tsx  index.tsx  verify.tsx
CredVault/programs/credVault/: Cargo.toml
CredVault/programs/credVault/src/: lib.rs
CredVault/services/: credVaultService.ts  (+2 more)
(+45 files in other folders)
