[package]
name = "credVault"
version = "0.1.0"
description = "A decentralized credentialing platform for African youth"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credVault"

[features]
no-entrypoint = []
no-idl = []
no-build = ["no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.12"
spl-token = "4.0.0"
mpl-token-metadata = { version = "4.2.1", features = ["no-entrypoint"] }