[package]
name = "credVault"
version = "0.1.0"
description = "A decentralized credentialing platform for African youth"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credVault"

[features]
no-entrypoint = []
no-idl = []
no-build = ["no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.16.0"
spl-token = "4.0.0"
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }